# lectionaries

./: README.md  church_calendar.py  experiments.py  lectionaries.py  pyproject.toml  read_reverse_lectionary.py
src/utils/: read_reverse_lectionary.py
